--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta charset="UTF-8" />
     <title>Document</title>
     <link rel="stylesheet" type="text/css" href="css/index.css" />
@@ -12,7 +13,7 @@
   <body>
     <header>
       <nav>
-        <a href="#">Home</a>
+        <a class="nav-home" href="#">Home</a>
         <span></span>
         <a class="bordered" href="#">About</a>
         <span></span>
